--- a/app/assets/css/extra.scss
+++ b/app/assets/css/extra.scss
@@ -11,3 +11,130 @@
   font-weight: 100 900; // range of weight
   src: url("~/assets/fonts/FarhangVariableDot.woff");
 }
+
+// body {
+//   overflow-x: hidden;
+// }
+
+// html {
+//   scroll-behavior: smooth;
+//   scroll-padding-top: 100px;
+//   /* this pixel should match fixed header height */
+// }
+
+// components
+// ::-webkit-scrollbar {
+//   width: 16px;
+// }
+
+// ::-webkit-scrollbar-track {
+//   background: theme("colors.gray.100");
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   border: 4px solid theme("colors.gray.100");
+//   background-clip: padding-box;
+//   border-radius: 9999px;
+//   background-color: theme("colors.slate.300");
+// }
+
+// ::-webkit-scrollbar-thumb:hover {
+//   background-color: theme("colors.slate.400");
+// }
+
+ol {
+  padding: 0 10px;
+
+  li::marker {
+    background-color: #d1d5db;
+    color: rgb(53, 53, 53);
+  }
+}
+
+.rtl,
+[dir=rtl] {
+  // direction: rtl;
+
+  ol {
+    list-style: persian !important;
+  }
+}
+
+// .ltr,
+// [dir=ltr] {
+//   direction: ltr;
+
+//   ol {
+//     list-style: auto;
+//   }
+// }
+
+
+.prose {
+  max-width: none;
+
+  a {
+    text-decoration: none;
+  }
+
+
+}
+
+blockquote {
+  text-align: justify;
+  background: #f9f9f9;
+  border-right: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C" "\201D" "\2018" "\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-left: 0.25em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
+}
+
+
+img.poster-front {
+  max-width: 300px;
+  margin: 24px auto 20px;
+  display: block;
+  width: 90%;
+}
+
+img.poster-single {
+  max-width: inherit;
+}
+
+
+// ::selection {
+//   color: gray;
+// }
+
+// code {
+//   direction: ltr;
+// }
+
+.prose .content {
+  img {
+    margin: 0 auto;
+    border: 1px solid #ddd;
+    padding: 3px;
+    border-radius: 3px;
+    background: #f3f3f3;
+  }
+
+  pre {
+    max-width: 100%;
+    word-break: break-word;
+    white-space: pre-wrap;
+  }
+}
