--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,5 +1,3 @@
-
-
 @import "tailwindcss";
 @import "@nuxt/ui";
 @plugin "@tailwindcss/typography";
@@ -7,4 +5,6 @@
   font-family: FarhangDot;
 }
 
-
+.navbar a {
+  @apply text-lg;
+}
