--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -2,7 +2,7 @@
   font-family: "Farhang";
   font-style: normal;
   font-weight: 100 900;
-  src: url("~/assets/fonts/Vazirmatn[wght],ttf");
+  src: url("~/assets/fonts/Vazirmatn[wght].ttf");
 }
 
 :root {
