random ui check

--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 @font-face {
   font-family: "Vazirmatn";
   font-style: normal;
@@ -7,4 +9,13 @@
 
 :root {
   font-family: Vazirmatn;
+}
+[dir="rtl"] .description {
+  @apply text-xl;
+}
+[dir="rtl"] .logo {
+  @apply text-3xl;
+}
+[dir="rtl"] .navbar span {
+  @apply text-lg;
 }
