--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,4 @@
-@import "tailwindcss" theme(static);
+@import "tailwindcss";
 @import "@nuxt/ui";
 @plugin "@tailwindcss/typography";
 
@@ -32,7 +32,6 @@ blockquote {
   padding: 1em 15px;
   font-style: italic;
   quotes: "“" "”" "‘" "’";
-  @apply bg-gray-100 dark:bg-gray-800 border-l-gray-400 dark:border-l-gray-600 text-gray-900 dark:text-gray-100;
 }
 [dir="rtl"] {
   blockquote {
@@ -50,7 +49,6 @@ blockquote::before {
   line-height: 0.1em;
   margin-right: 0.2em;
   vertical-align: -0.4em;
-  @apply text-gray-500 dark:text-gray-400;
 }
 
 blockquote p {
