--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -3,23 +3,26 @@
 /* custom themes  */
 
 @font-face {
+  font-family: "FarhangDot";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("~/assets/fonts/FarhangVariableDot.woff");
+}
+@font-face {
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 100 900;
   src: url("~/assets/fonts/Vazirmatn[wght].ttf");
 }
-
 :root {
   font-family: Vazirmatn;
 }
-[dir="rtl"] .description {
-  @apply text-xl;
-}
+
 [dir="rtl"] .logo {
   @apply text-3xl;
+  font-family: FarhangDot;
 }
 [dir="rtl"] .navbar span {
-  @apply text-sm;
 }
 
 .dark .page-header {
