--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -6,7 +6,7 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 100 900;
-  src: url("/fonts/Vazirmatn[wght].woff2") format("woff2");
+  src: url("@/fonts/Vazirmatn[wght].woff2") format("woff2");
   font-display: swap;
 }
 :root {
