--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -1,4 +1,12 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Vazirmatn";
+  font-style: normal;
+  font-weight: 100 900;
+  src: url("/fonts/Vazirmatn[wght].ttf");
+}
+
 :root {
   font-family: Vazirmatn;
 }
