--- a/app/assets/css/extra.css
+++ b/app/assets/css/extra.css
@@ -4,7 +4,7 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 100 900;
-  src: url("@/assets/fonts/Vazirmatn[wght].woff2");
+  src: url("~/assets/fonts/Vazirmatn[wght].woff2");
 }
 
 :root {
